<resources>
    <string-array name="shipmentPlans">
        <item>INSTANT</item>
        <item>SAME DAY</item>
        <item>NEXT DAY</item>
        <item>REGULER</item>
        <item>KARGO</item>
    </string-array>

    <string-array name="category">
        <item>BOOK</item>
        <item>KITCHEN</item>
        <item>ELECTRONIC</item>
        <item>FASHION</item>
        <item>GAMING</item>
        <item>GADGET</item>
        <item>MOTHERCARE</item>
        <item>COSMETICS</item>
        <item>HEALTHCARE</item>
        <item>FURNITURE</item>
        <item>JEWELRY</item>
        <item>TOYS</item>
        <item>FNB</item>
        <item>STATIONERY</item>
        <item>SPORTS</item>
        <item>AUTOMOTIVE</item>
        <item>PETCARE</item>
        <item>ART_CRAFT</item>
        <item>CARPENTRY</item>
        <item>MISCELLANEOUS</item>
        <item>PROPERTY</item>
        <item>TRAVEL</item>
        <item>WEDDING</item>
    </string-array>
    <string name="app_name">jmart-android</string>
    <string name="account_details">Account Details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="balance">Balance</string>
    <string name="top_up_amount">Top Up Amount</string>
    <string name="top_up">TOP UP</string>
    <string name="register_store">REGISTER STORE</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="store">store</string>
    <string name="cancel">cancel</string>
    <string name="register">register</string>
    <string name="create_product">Create Product</string>
    <string name="weight">Weight</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="condition">Condition</string>
    <string name="create">Create</string>
    <string name="category">Category</string>
    <string name="shipment_plan">Shipment Plan</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="go">GO</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="to">to</string>
    <string name="highest_price">Highest Price</string>
    <string name="product_condition">Product Condition</string>
    <string name="newbox">New</string>
    <string name="usedbox">Used</string>
    <string name="product_category">Product Category</string>
    <string name="apply">APPLY</string>
    <string name="clear">CLEAR</string>
    <string name="search">search</string>
    <string name="addbox">addbox</string>
    <string name="person">person</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="buy_now">BUY NOW</string>
    <string name="addressbuy">Input Address</string>
    <string name="quantity">Input Quantity</string>
    <string name="finalprice">Total Price</string>
    <string name="invoice">Invoice</string>
    <string name="id_order">Id Order</string>
    <string name="status_ship">Status Shipment</string>
    <string name="total_harga">Total Harga</string>
    <string name="date_shipment">Date Shipment</string>
    <string name="accept">Accept</string>
    <string name="decline">DECLINE</string>
    <string name="input_resi">Input Resi</string>
    <string name="Submit">SUBMIT</string>
</resources>