<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FilterFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/id_filter_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="Name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_weight="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lowest_price"/>

            <EditText
                android:id="@+id/id_low_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Angka"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/to"
            android:layout_weight="2"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:layout_weight="3">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_price"/>

            <EditText
                android:id="@+id/id_highest_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Angka"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_condition"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_weight="3"/>

        <CheckBox
            android:id="@+id/id_checkbox_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newbox"
            android:layout_weight="1"/>

        <CheckBox
            android:id="@+id/id_checkbox_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usedbox"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_category"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="3"/>

        <Spinner
            android:id="@+id/id_spinner_product_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <Button
            android:id="@+id/id_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/id_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clear"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>

</LinearLayout>