<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductsFragment"
    android:orientation="vertical">


    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="8">

        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/prev"
            android:layout_weight="2"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_margin="5dp"
            android:layout_weight="2"/>
        <EditText
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            tools:hint="number"
            android:layout_weight="2"
            android:layout_margin="5dp"/>
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:layout_margin="5dp"
            android:layout_weight="2"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
</LinearLayout>